--- a/css/task12/task12-1.scss
+++ b/css/task12/task12-1.scss
@@ -70,6 +70,7 @@ body {
         display: flex;
         padding-top: 64px;
         width: 100%;
+        border-bottom: 1px solid #e1e5e7;
         
 >.spinner1 {
    width: 33.33%; 
@@ -97,10 +98,6 @@ body {
     top: 43%;
     left: 84%;   
 }
-
-
-
-
 
 .box {
     border-bottom: 1px solid #e1e5e7 ;
