--- a/css/task12/task-12-a.scss
+++ b/css/task12/task-12-a.scss
@@ -28,44 +28,59 @@ body {
   
 }
 
-
-.background {
-    padding-top: 60px;                                
-    background-image: url('./img/background.png');
-    background-size: cover;                            
+.box {
+    display: flex;
+    align-items: center;
     position: relative;
-    object-fit: cover;
-    height: 163px;
-    >.picture {
+    .background {
+        padding-top: 59px;
+        position: relative;
+        background-size: cover;        
+        object-fit: cover;  
+        width: 100%;           
+    }
+    >.block {
         position: absolute;
-        width: 100px;
-        top: 50%;
+        margin-top: 29px;
         left: 30px;
-        margin-top: -20px;
+        width: 64%;
+        display: flex;
+        align-items: center;
     }
-    >.name {
-        width: 100px;
-         display: flex;
-         justify-content: space-between;
-         color: #fff;
-         position: absolute;
-         top: 109px;
-         left: 150px;
-         font-size: 17px;
-    }
-    >.location {
-        font-size: 13px;
-        color: #fff;
-        position: absolute;
-        top: 150px;
-        left: 150px;
-    
+    & .picture {
+        width: 40%;
         img {
-            width: 10px;
+            width: 100%;
         }
     }
-    
+  span + span {
+      font-size: 18px;
+  }
 }
+
+.block-1 {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   margin-left: 20px;
+   font-size: 20px;
+   color: #fff;
+   height: 11vmin;
+>.name {
+    width: 115px;
+     display: flex;
+     justify-content: space-between;
+}
+.location {
+    font-size: 15px;
+
+    img {
+        width: 10px;
+    }
+}
+
+}
+
 
 .skill {
     line-height: 70px;
