--- a/css/task13/task13-3.css
+++ b/css/task13/task13-3.css
@@ -38,7 +38,7 @@ body {
   padding-left: 15px;
 }
 
-.box-1 > .block-1 span + img {
+.box-1 > .block-1 img {
   margin-right: 15px;
 }
 
@@ -112,7 +112,7 @@ body {
   font-size: 40px;
 }
 
-.box-3 > .box-4 > img {
+.box-3 > .box-4 img {
   width: 21px;
   height: 50px;
   padding-left: 10px;
@@ -188,4 +188,9 @@ body {
 
 .lo {
   font-size: 26px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
 }
