--- a/css/task11/task11.css
+++ b/css/task11/task11.css
@@ -17,7 +17,7 @@ body {
 
 .header span {
   color: #fff;
-  size: 15px;
+  font-size: 15px;
   line-height: 48px;
 }
 
@@ -29,8 +29,8 @@ body {
   margin: 0 auto;
 }
 
-.header > .magnify {
-  font-size: 17px;
+.header .magnify {
+  font-size: 18px;
 }
 
 .number {
@@ -60,7 +60,7 @@ body {
 }
 
 .logo {
-  width: 17px;
+  width: 15px;
   height: 22px;
 }
 
