--- a/css/task11/task11.scss
+++ b/css/task11/task11.scss
@@ -13,7 +13,7 @@ body {
     background-image: linear-gradient(#199ce2, #1ba3ec,#1999dd);
     span {
         color: #fff;
-        size: 15px;
+        font-size: 15px;
         line-height: 48px;
     }
     >.block {
@@ -23,8 +23,8 @@ body {
         align-items: center;
         margin: 0 auto;
     }
-    >.magnify {
-        font-size: 17px;
+    .magnify {
+        font-size: 18px;
     }
 }
 
@@ -54,7 +54,7 @@ body {
 
 }
 .logo {
-    width: 17px;
+    width: 15px;
     height: 22px;
 }
 .enter {
