--- a/css/task13/task13-3.scss
+++ b/css/task13/task13-3.scss
@@ -41,7 +41,7 @@ $border: #c9c9c9;
          padding-left: 15px;
      }
 
-     span + img {
+     img {
          margin-right: 15px;
      }
      
@@ -116,7 +116,7 @@ $border: #c9c9c9;
        
     }
 
-      >img {
+      img {
          width: 21px;
          height: 50px;
          padding-left: 10px;
@@ -205,3 +205,7 @@ $border: #c9c9c9;
     font-size: 26px;
 }
 
+a {
+    color: $color-2;
+    text-decoration:none;
+}
