--- a/css/task13/task13-2.scss
+++ b/css/task13/task13-2.scss
@@ -40,6 +40,7 @@ background: $background;
         color: #ffc865;
         font-size: 24px;
         text-align: center;
+        text-align-last: left;
     }
 
 
