--- a/css/task12/task-12-a.scss
+++ b/css/task12/task-12-a.scss
@@ -101,6 +101,7 @@ body {
    margin: 0 auto;
    line-height: 70px;
    font-size: 20px; 
+   padding-bottom: 90px;
 }
 
 .content-1 {
@@ -204,4 +205,8 @@ body {
   font-size: 20px;
   outline: none;
  }
+}
+
+.hg {
+    line-height: 40px;
 }
