--- a/css/task14/task14-1.css
+++ b/css/task14/task14-1.css
@@ -1,15 +1,16 @@
 body {
   margin: 0;
+  position: relative;
 }
 
 .nav {
   background: #29b078;
+  height: 368px;
 }
 
 .nav > .nav-navigation {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   width: 90%;
   margin: 0 auto;
   padding: 20px 0;
@@ -17,13 +18,78 @@ body {
 
 .nav > .nav-navigation > .nav-box {
   display: flex;
-  width: 38%;
+  width: 35%;
 }
 
 .nav > .nav-navigation > .nav-box > .nav-text {
   flex-basis: 25%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   color: #fff;
   font-size: 20px;
+}
+
+@media (max-width: 768px) {
+  .nav-box {
+    width: 100% !important;
+    position: absolute;
+    top: 89px;
+    flex-direction: column;
+    left: 0;
+  }
+  .nav-text {
+    justify-content: center !important;
+    line-height: 70px;
+  }
+  .nav-text:hover {
+    transition: all 2s linear 0s;
+    background: teal;
+  }
+}
+
+@media (max-width: 768px) {
+  .button {
+    width: 40px;
+    height: 34px;
+    background: #47d197;
+    border: 0;
+    border-radius: 5px;
+    outline: none;
+  }
+  .button > .iconfont {
+    color: #33946b;
+  }
+  .nav-navigation {
+    align-items: center;
+  }
+  #qq:hover .box {
+    top: 368px;
+  }
+}
+
+@media (min-width: 769px) {
+  .button {
+    display: none;
+  }
+  .nav-navigation {
+    padding: 0 !important;
+  }
+  .nav-text {
+    line-height: 86px;
+  }
+  .nav-text:hover {
+    border-bottom: 3px solid #fff;
+  }
+  .logo {
+    padding-top: 20px;
+    padding-left: 20px;
+  }
+}
+
+.box {
+  width: 100%;
+  height: 500px;
+  background: #fff;
+  position: absolute;
+  top: 89px;
 }
