--- a/css/task14/task14-1.scss
+++ b/css/task14/task14-1.scss
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    position: relative;
 }
 
 
@@ -10,24 +11,24 @@ $color-1:#fff;
 
 .nav {
     background: $nav;
+    height: 368px;
+   
 
     >.nav-navigation {
         display: flex;
         justify-content: space-between;
-        align-items: center;
         width: 90%;
         margin: 0 auto;
         padding: 20px 0;
 
-
         >.nav-box {
             display: flex;
-            width: 38%;
+            width: 35%;
 
             >.nav-text {
                 flex-basis: 25%;
                 display: flex;
-                justify-content: flex-end;
+                justify-content: center;
                 color: $color-1;
                 font-size: 20px;
             }
@@ -35,3 +36,98 @@ $color-1:#fff;
     }
 
 }
+
+@media (max-width:768px) {
+
+.nav-box {
+        width: 100% !important;
+        position: absolute;
+        top: 89px;
+        flex-direction: column;
+        left: 0;
+}
+.nav-text {
+justify-content: center !important;
+line-height: 70px;
+
+&:hover {
+    transition:  all 2s linear 0s; 
+    background: teal; 
+}
+}
+
+}
+
+
+@media (max-width:768px) {
+
+.button {
+    width: 40px;
+    height: 34px;
+    background: #47d197;
+    border: 0;
+    border-radius: 5px;
+    outline: none;
+
+    >.iconfont {
+        color: #33946b;
+    }
+}
+.nav-navigation {
+    align-items: center;
+}
+
+
+
+#qq:hover  .box{
+    top: 368px;
+}
+
+
+
+}
+
+@media (min-width:769px) {
+    .button {
+        display: none;
+    }
+
+
+    .nav-navigation {
+        padding: 0 !important;
+    }
+    .nav-text {
+        line-height: 86px;
+
+        &:hover {
+            border-bottom: 3px solid $color-1;
+        }
+    }
+
+    .logo {
+        padding-top: 20px;
+        padding-left: 20px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+.box {
+    width: 100%;
+    height: 500px;
+    background: $color-1;
+    position: absolute;
+    top: 89px;
+}
+
