--- a/css/task13/task13-1.scss
+++ b/css/task13/task13-1.scss
@@ -1,249 +1,152 @@
 body {
+    margin: 0 auto;
     min-width: 320px;
     max-width: 768px;
-    margin: 0 auto;
 }
+
 $background: #29bde0;
-$color: #a7a7a7;
-$color-1: #fbb435;
-$color-2: #fff;
-$border: #c9c9c9;
+$block-top: #f5c97b;
+$block-bottom: #83b09a;
+
 .box {
-    background: #f0f0f0;
-    padding-bottom: 40px;
-    position: relative;
-    overflow: hidden;
+    background:$background;
     height: 100vh;
-    
-    left: 0%;
-    transition:left 0.5s;
-
-
->.header {
-    background: $background;
-    height: 60px;
+}
+.header {
+    width: 94%;
+    margin: 0 auto;
     display: flex;
-    align-items: center;
-}
-}
-
-.box-1 {
-     width: 92%;
-     margin: 0 auto;
- .block-1 {
-     height: 70px;
-     border: 1px solid $border;
-     background: $color-2;
-     margin-top: 24px;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     color: $color;
-     font-size: 24px;
-
-     span {
-         padding-left: 15px;
-     }
-
-     img {
-         margin-right: 15px;
-     }
-     
+    align-content: center;
+    justify-content: space-between;
+    padding: 15px 0;
+    color: #fff;
+    font-size: 18px;
+ img {
+     width: 24px;
+     height: 24px;
  }
-.box-2 {
-    border: 1px solid $border;
-    margin-top: 24px;
-    background: $color-2;
-    .block-2 {
-        height: 70px;
-        border-bottom: 1px solid $color-1;
-        color: $color-1;
-        font-size: 28px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
+
+}
+.hint {
+   background: #b9e9f5;
+   line-height: 50px;
+   display: flex;
+   align-items: center;
+   padding-left: 34px;
+   font-size: 17px;
+   position: relative;
+   >.MP3 {                                       
+    width: 100px;
+    height: 38px; 
+    position: absolute;
+    right: 12px;
+    background-color:#b9e9f5;
+    opacity:0;
+    transform:rotate(180deg); 
+}
+>.play {                                      
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 15px;
+    z-index: 99999;
+    pointer-events:none;  
+}
+.triangle {                                       
+    width: 0; 
+    height: 0;
+    margin-left: 34px;
+    margin-bottom: -7px;
+    margin-top: -1px;
+    border-width: 10px 7px;
+    border-style: solid;
+    border-color:#b9e9f5 transparent transparent transparent;
+    position: absolute;
+    top: 51px;
 }
 
 }
 
-.box-3 {
+.hint-1 {
+ color: #fff;
+ font-size: 13px;
+ line-height: 50px;
+ padding-left: 70px;
+}
+
+.block {
+  width: 94%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+   >.block-1 {
+    flex-basis: 33.33%;
     display: flex;
     flex-direction: column;
-    >.block-3 {
-        width: 80%;
-        background: $background;
-        height: 110px;
+    align-items: center;
+   }
+   .block-2 {
+    margin: 0 auto;
+    width: 88px;
+    border: 3px solid #fff;
+    >.top {
+        height: 64px;
+        background: $block-top;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: $color-2;
-        font-size: 24px;
-        margin: 0 auto;
-        margin-top: 24px;
-
-        &:hover {
-            background: $color-1;
-             font-size: 30px;
-        }
+        font-size: 17px;
     }
-
-    > span {
-        color: $color;
-        font-size: 16px;
-        text-align: center;
-        padding-top: 24px;
-      }
-
- >.box-4 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-top: 24px;
-
-    >.block-4 {
-        width: 80%;
-        background: $background;
-        height: 110px;
+    >.bottom {
+        height: 24px;
+        background: $block-bottom;
         display: flex;
         justify-content: center;
         align-items: center;
-        color: $color-2;
-        font-size: 24px;
-        margin-left: 28px;
-
-        &:hover {
-            background: #f66f6f;
-            font-size: 40px;
-        }
-       
+        font-size: 15px;
+        color: #fff;
     }
+}
 
-      img {
-         width: 21px;
-         height: 50px;
-         padding-left: 10px;
-
-      }
+}
+.block-3 {
+    width: 92px;
+    margin: 15px 0;
+    height: 19px;
+>.combination {
+    width: 92px;
+    height: 19px;
+    display: none;
     
 }
-
 }
 
-
-.dot {
-    display: flex;
-    justify-content: center;
-
-    li {
-    font-size: 30px;
-    margin-right: -24px;
-    margin-top: -7px;
-    color: $border;
-
-    &:hover {
-        color: $background;
-    }
-    }
-   
-}
-
-
-
-
-
-
-
-
-
-.select {
-    padding-left: 20px;
-    pointer-events:none; 
-}
-
-.list {
-    color: $background;
-    position: absolute;
-    z-index: 999;
-    background: $color-2;
-    opacity: 1;
-    top: 60;
-    left: 0;
-    transition:left 0.5s;
-    height: 100%;
-    width: 260px;
-    display: none;
-}
-
-
-.list-1 {
-    width: 200px;
-    height: 50px;
-    border-bottom: 1px solid $color-2;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-}
-
-.notice {
-    width: 24px;
-    height: 23.6px;
-    border-radius: 100%;
-    border: 1px solid $background;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.left {
-    display: flex;
-    align-items: center;
-
-}
-
-.text {
-    padding-left: 15px;
-}
-
-.text-1 {
-    padding-right: 20px;
-    font-size: 26px;
-}
-
-.lo {
-    font-size: 26px;
-}
-
-a {
-    color: $color-2;
-    text-decoration:none;
-}
-
-.box input {
-    display: none;
-}
-
-.an::before {
-    content: "";
-    display: inline-block;
-    width: 38px;
-    height: 40px;
-    background: blueviolet;
-    position: absolute;
-    top: 10px;
-    left: 20.5px;
-    opacity: 0;
-
-}
-
-#t1:checked~ .list {
+.block-1:hover .combination {
     display: block;
 }
 
-#t1:checked~ .box-1 {
-    position: absolute;
-    left: 260px;
-    height: 100vh;
+.footer {
+    position: fixed;
+    z-index: 99999;
+    max-width: 768px;
+    min-width: 320px;
+    width: 100%;
+    height: 60px;
+    bottom: 0;
+    background: #29bde0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+
+.button {
+    background-color: transparent;
+    color:#ffffff;
+    font-size: 17px;                                          
+    width: 245px;
+    height: 43.5px;
+    background: #fbb435;
+    border: 0;
+    
 }
