--- a/css/task13/task13-3.css
+++ b/css/task13/task13-3.css
@@ -8,6 +8,10 @@ body {
   background: #f0f0f0;
   padding-bottom: 40px;
   position: relative;
+  overflow: hidden;
+  height: 100vh;
+  left: 0%;
+  transition: left 0.5s;
 }
 
 .box > .header {
@@ -22,7 +26,7 @@ body {
   margin: 0 auto;
 }
 
-.box-1 > .block-1 {
+.box-1 .block-1 {
   height: 70px;
   border: 1px solid #c9c9c9;
   background: #fff;
@@ -34,21 +38,21 @@ body {
   font-size: 24px;
 }
 
-.box-1 > .block-1 span {
+.box-1 .block-1 span {
   padding-left: 15px;
 }
 
-.box-1 > .block-1 img {
+.box-1 .block-1 img {
   margin-right: 15px;
 }
 
-.box-1 > .box-2 {
+.box-1 .box-2 {
   border: 1px solid #c9c9c9;
   margin-top: 24px;
   background: #fff;
 }
 
-.box-1 > .box-2 > .block-2 {
+.box-1 .box-2 .block-2 {
   height: 70px;
   border-bottom: 1px solid #fbb435;
   color: #fbb435;
@@ -134,12 +138,9 @@ body {
   color: #29bde0;
 }
 
-.pog:hover .list {
-  left: 0%;
-}
-
 .select {
   padding-left: 20px;
+  pointer-events: none;
 }
 
 .list {
@@ -148,9 +149,12 @@ body {
   z-index: 999;
   background: #fff;
   opacity: 1;
-  top: 0;
-  left: -75%;
+  top: 60;
+  left: 0;
   transition: left 0.5s;
+  height: 100%;
+  width: 260px;
+  display: none;
 }
 
 .list-1 {
@@ -193,4 +197,30 @@ body {
 a {
   color: #fff;
   text-decoration: none;
+}
+
+.box input {
+  display: none;
+}
+
+.an::before {
+  content: "";
+  display: inline-block;
+  width: 38px;
+  height: 40px;
+  background: blueviolet;
+  position: absolute;
+  top: 10px;
+  left: 20.5px;
+  opacity: 0;
+}
+
+#t1:checked ~ .list {
+  display: block;
+}
+
+#t1:checked ~ .box-1 {
+  position: absolute;
+  left: 260px;
+  height: 100vh;
 }
