--- a/css/task13/task13-3.scss
+++ b/css/task13/task13-3.scss
@@ -11,8 +11,12 @@ $border: #c9c9c9;
 .box {
     background: #f0f0f0;
     padding-bottom: 40px;
-
     position: relative;
+    overflow: hidden;
+    height: 100vh;
+    
+    left: 0%;
+    transition:left 0.5s;
 
 
 >.header {
@@ -26,7 +30,7 @@ $border: #c9c9c9;
 .box-1 {
      width: 92%;
      margin: 0 auto;
- >.block-1 {
+ .block-1 {
      height: 70px;
      border: 1px solid $border;
      background: $color-2;
@@ -46,11 +50,11 @@ $border: #c9c9c9;
      }
      
  }
->.box-2 {
+.box-2 {
     border: 1px solid $border;
     margin-top: 24px;
     background: $color-2;
-    >.block-2 {
+    .block-2 {
         height: 70px;
         border-bottom: 1px solid $color-1;
         color: $color-1;
@@ -59,7 +63,6 @@ $border: #c9c9c9;
         justify-content: center;
         align-items: center;
     }
-   
 }
 
 }
@@ -146,12 +149,16 @@ $border: #c9c9c9;
 }
 
 
-.pog:hover .list {
-    left: 0%;
-}
+
+
+
+
+
+
 
 .select {
     padding-left: 20px;
+    pointer-events:none; 
 }
 
 .list {
@@ -160,11 +167,14 @@ $border: #c9c9c9;
     z-index: 999;
     background: $color-2;
     opacity: 1;
-    
-    top: 0;
-    left: -75%;
+    top: 60;
+    left: 0;
     transition:left 0.5s;
+    height: 100%;
+    width: 260px;
+    display: none;
 }
+
 
 .list-1 {
     width: 200px;
@@ -208,4 +218,32 @@ $border: #c9c9c9;
 a {
     color: $color-2;
     text-decoration:none;
+}
+
+.box input {
+    display: none;
+}
+
+.an::before {
+    content: "";
+    display: inline-block;
+    width: 38px;
+    height: 40px;
+    background: blueviolet;
+    position: absolute;
+    top: 10px;
+    left: 20.5px;
+    opacity: 0;
+
+}
+
+#t1:checked~ .list {
+    display: block;
+}
+
+#t1:checked~ .box-1 {
+    position: absolute;
+    left: 260px;
+    height: 100vh;
+
 }
