--- a/css/task14/task14-1.scss
+++ b/css/task14/task14-1.scss
@@ -3,7 +3,6 @@ body {
     position: relative;
 }
 
-
 $background: #fafafa;
 $nav: #29b078;
 $color: #999999;
@@ -56,43 +55,18 @@ line-height: 70px;
 }
 }
 
-}
-
-
-@media (max-width:768px) {
-
-.button {
-    width: 40px;
-    height: 34px;
-    background: #47d197;
-    border: 0;
-    border-radius: 5px;
-    outline: none;
-
-    >.iconfont {
-        color: #33946b;
-    }
-}
-.nav-navigation {
-    align-items: center;
-}
-
-
-
-#qq:hover  .box{
+ .button:checked .tow {
     top: 368px;
 }
 
-
-
+.nav-navigation {
+    align-items: center;
+}
 }
 
+
 @media (min-width:769px) {
-    .button {
-        display: none;
-    }
-
-
+   
     .nav-navigation {
         padding: 0 !important;
     }
@@ -109,25 +83,172 @@ line-height: 70px;
         padding-left: 20px;
     }
 
+}
+@media (max-width:768px) {
 
+    .button {
+        width: 40px;
+        height: 40px;
+        background: #47d197;
+        border: 0;
+        border-radius: 5px;
+        outline: none;
+        pointer-events:none; 
+    
+        >.iconfont {
+            color: #33946b;
+        }
+    }  
+    
+    }
 
+    @media (min-width:769px) {
+        .button {
+            display: none;
+        }
+    }    
 
-
-
-
-
-
-
-
-
+.box input {
+    display: none;
 }
 
+@media (max-width:768px) {
 
-.box {
+    .an::before {
+        content: "";
+        display: inline-block;
+        width: 36px;
+        height: 40px;
+        background: #47d197;
+        position: absolute;
+        z-index: 999;
+        top: 26px;
+        right: 39px;
+        border-radius: 5px;
+        opacity: 0;
+    }
+    #t1:checked ~ .content {
+        top: 368px;
+        transition:  all 0.3s linear 0s;
+    }
+    
+}
+
+.content {
     width: 100%;
-    height: 500px;
+    height: 279px;
     background: $color-1;
     position: absolute;
     top: 89px;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.footer {
+    background: $nav;
+>.footer-box {
+    margin: 0 auto;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    color: $color-1;
+    padding: 15px 0;
+
+    >.contact {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 155px;
+
+        @media  (max-width:768px){
+            & {
+                width: 100%;
+            }
+        }
+    }  
+}
+
+.subordinate {
+padding-left: 22px;
+padding-right: 17px;
+
+@media  (max-width:768px){
+    & {
+        padding-left: 0;
+    }
+}
+
+@media  (min-width:1200px){
+    & {
+        padding-right: 20%;
+    }
+
+}
+.subordinate-1 {
+    display: flex;
+    justify-content: space-between;
+    width: 220px;
+    line-height: 50px;
+}
+.subordinate-2 {
+    display: flex;
+    flex-direction: column;
+}
+
+}
+
+}
+.wx {
+    display: flex;
+    flex-direction: column;
+
+    img {
+        padding-top: 5px;
+    }
+}
+.footer-end {
+border-top: 1px solid $color-1;
+color: $color-1;
+span {
+    font-size: 12px;
+    display: block;
+    text-align: center;
+    line-height: 30px;
+    word-break: break-all;
+}
+
+}
