--- a/css/task14/新建文件夹/task14-1.scss
+++ b/css/task14/新建文件夹/task14-1.scss
@@ -55,9 +55,6 @@ line-height: 70px;
 }
 }
 
- .button:checked .tow {
-    top: 368px;
-}
 
 .nav-navigation {
     align-items: center;
@@ -123,7 +120,7 @@ line-height: 70px;
         position: absolute;
         z-index: 999;
         top: 26px;
-        right: 39px;
+        right: 5.4%;
         border-radius: 5px;
         opacity: 0;
     }
