--- a/css/task13/task13-3.css
+++ b/css/task13/task13-3.css
@@ -7,14 +7,14 @@ body {
 .box {
   background: #f0f0f0;
   padding-bottom: 40px;
-  position: relative;
   overflow: hidden;
-  height: 100vh;
+  position: relative;
+  height: 100%;
   left: 0%;
   transition: left 0.5s;
 }
 
-.box > .header {
+.box .header {
   background: #29bde0;
   height: 60px;
   display: flex;
@@ -24,6 +24,7 @@ body {
 .box-1 {
   width: 92%;
   margin: 0 auto;
+  transition: all 2s;
 }
 
 .box-1 .block-1 {
@@ -149,12 +150,11 @@ body {
   z-index: 999;
   background: #fff;
   opacity: 1;
-  top: 60;
-  left: 0;
+  left: -261px;
   transition: left 0.5s;
   height: 100%;
   width: 260px;
-  display: none;
+  transition: all 1s;
 }
 
 .list-1 {
@@ -216,11 +216,11 @@ a {
 }
 
 #t1:checked ~ .list {
-  display: block;
+  left: 0;
+  transition: all 1s;
 }
 
 #t1:checked ~ .box-1 {
-  position: absolute;
-  left: 260px;
-  height: 100vh;
+  transform: translate(260px, 0px);
+  transition: all 1s;
 }
