--- a/css/task14/task14-2.css
+++ b/css/task14/task14-2.css
@@ -3,6 +3,25 @@ body {
   position: relative;
 }
 
+.header {
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 87.3%;
+  margin: 0 auto;
+}
+
+.header span {
+  color: #29b078;
+  font-size: 13px;
+}
+
+.header img {
+  width: 92px;
+  padding-right: 20px;
+}
+
 .nav {
   background: #29b078;
   height: 368px;
@@ -29,11 +48,11 @@ body {
   font-size: 20px;
 }
 
-@media (max-width: 768px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .nav-box {
     width: 100% !important;
     position: absolute;
-    top: 89px;
+    top: 132px;
     flex-direction: column;
     left: 0;
   }
@@ -45,31 +64,9 @@ body {
     transition: all 2s linear 0s;
     background: teal;
   }
-  .button:checked .tow {
-    top: 368px;
-  }
   .nav-navigation {
     align-items: center;
   }
-}
-
-@media (min-width: 769px) {
-  .nav-navigation {
-    padding: 0 !important;
-  }
-  .nav-text {
-    line-height: 86px;
-  }
-  .nav-text:hover {
-    border-bottom: 3px solid #fff;
-  }
-  .logo {
-    padding-top: 20px;
-    padding-left: 20px;
-  }
-}
-
-@media (max-width: 768px) {
   .button {
     width: 40px;
     height: 40px;
@@ -82,19 +79,6 @@ body {
   .button > .iconfont {
     color: #33946b;
   }
-}
-
-@media (min-width: 769px) {
-  .button {
-    display: none;
-  }
-}
-
-.box input {
-  display: none;
-}
-
-@media (max-width: 768px) {
   .an::before {
     content: "";
     display: inline-block;
@@ -103,23 +87,119 @@ body {
     background: #47d197;
     position: absolute;
     z-index: 999;
-    top: 26px;
-    right: 39px;
+    top: 66px;
+    right: 5.4%;
     border-radius: 5px;
     opacity: 0;
   }
   #t1:checked ~ .content {
-    top: 368px;
+    top: 408px;
     transition: all 0.3s linear 0s;
   }
+  .subordinate {
+    padding-left: 0 !important;
+  }
+  .contact {
+    width: 100%;
+  }
+}
+
+@media (min-width: 769px) {
+  .nav-navigation {
+    padding: 0 !important;
+  }
+  .nav-text {
+    line-height: 89px;
+  }
+  .nav-text:hover {
+    border-bottom: 3px solid #fff;
+  }
+  .logo {
+    padding-top: 20px;
+    padding-left: 20px;
+  }
+  .button {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px) {
+  .subordinate {
+    padding-right: 20% !important;
+  }
+}
+
+.box input {
+  display: none;
 }
 
 .content {
   width: 100%;
-  height: 279px;
-  background: #fff;
+  background: #fafafa;
   position: absolute;
-  top: 89px;
+  top: 132px;
+  transition: all 0.3s linear 0s;
+}
+
+.banner {
+  width: 100%;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.home {
+  padding: 20px 0;
+  width: 87%;
+  margin: 0 auto;
+}
+
+.home span {
+  color: #29b078;
+}
+
+.synopsis {
+  width: 87%;
+  display: flex;
+  margin: 0 auto;
+  margin-bottom: 17%;
+}
+
+.synopsis .left {
+  flex-basis: 19%;
+  border: 1px solid #ededed;
+  margin-right: 3%;
+}
+
+.synopsis .left .left-1 {
+  display: flex;
+  border-bottom: 1px solid #e6e6e6;
+  justify-content: center;
+  align-items: center;
+}
+
+.synopsis .left .circle {
+  width: 8px;
+  height: 8px;
+  border-radius: 100%;
+  border: 1px solid #ffa979;
+  display: inline-block;
+}
+
+.synopsis .left .block {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: #29b078;
+  font-size: 13px;
+}
+
+.synopsis .left .block .block-1 {
+  width: 98px;
+}
+
+.synopsis .right {
+  flex-basis: 78%;
+  border: 1px solid #ededed;
 }
 
 .footer {
@@ -144,27 +224,9 @@ body {
   height: 155px;
 }
 
-@media (max-width: 768px) {
-  .footer > .footer-box > .contact {
-    width: 100%;
-  }
-}
-
 .footer .subordinate {
   padding-left: 22px;
   padding-right: 17px;
-}
-
-@media (max-width: 768px) {
-  .footer .subordinate {
-    padding-left: 0;
-  }
-}
-
-@media (min-width: 1200px) {
-  .footer .subordinate {
-    padding-right: 20%;
-  }
 }
 
 .footer .subordinate .subordinate-1 {
@@ -199,4 +261,13 @@ body {
   text-align: center;
   line-height: 30px;
   word-break: break-all;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.bq:hover {
+  text-decoration: underline;
 }
