--- a/css/task/task14-3.css
+++ b/css/task/task14-3.css
@@ -107,17 +107,6 @@ body {
   .nav-link .link-text {
     font-size: 15px !important;
   }
-  .an:before {
-    width: 30px !important;
-    height: 27px !important;
-  }
-  .button {
-    width: 30px !important;
-    height: 27px !important;
-  }
-  .nav-img img {
-    width: 70px;
-  }
   .list-1 {
     flex-basis: 100% !important;
   }
@@ -140,17 +129,26 @@ body {
   .an:before {
     content: "";
     display: inline-block;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 27px;
     background: black;
     position: absolute;
     top: 20px;
     right: 7%;
     opacity: 0;
   }
+  .nav-img img {
+    width: 70px;
+  }
+  ul {
+    line-height: 30px !important;
+  }
+  ul li {
+    font-size: 15px !important;
+  }
   .button {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 27px;
     background: #47d197;
     border: 0;
     border-radius: 5px;
@@ -171,7 +169,7 @@ body {
   }
   .nav-img {
     width: 86% !important;
-    height: 80px;
+    height: 50px;
     margin: 0 auto;
   }
   .nav-link {
@@ -182,7 +180,6 @@ body {
     display: none;
   }
   .nav-link .link-text:hover {
-    transition: all 2s linear;
     background: teal;
   }
   #pull:checked ~ .nav-link {
