--- a/css/task14/task14-3.css
+++ b/css/task14/task14-3.css
@@ -50,6 +50,7 @@ body {
   display: flex;
   color: #fff;
   padding: 17px 0;
+  text-align: center;
 }
 
 .nav-link .link-text {
@@ -58,7 +59,7 @@ body {
 }
 
 @media (min-width: 768px) {
-  .nav-link .link-text:hover {
+  li:hover {
     height: 54px;
     border-bottom: 3px solid #fff;
   }
@@ -179,7 +180,7 @@ body {
     line-height: 50px;
     display: none;
   }
-  .nav-link .link-text:hover {
+  li:hover {
     background: teal;
   }
   #pull:checked ~ .nav-link {
