--- a/css/task14/css/task14-1.scss
+++ b/css/task14/css/task14-1.scss
@@ -401,10 +401,9 @@ $color-3: #999999;
    
     
 }
+
 .list-2 {
-    border-left: 1px dashed transparent;
-    background: linear-gradient(#fafafa,#fafafa) padding-box,
-    repeating-linear-gradient(-45deg,#ccc 0, #ccc 0.25em,white 0,white 0.75em);
+    border-left:1px dashed $color-3;
     align-items: center;
     justify-content: flex-end;
   
