--- a/css/task14/css/task14-1.css
+++ b/css/task14/css/task14-1.css
@@ -140,6 +140,10 @@ body {
   }
   .number .number-1 {
     flex-basis: 62% !important;
+    padding-left: 5%;
+  }
+  .number .number-1 span {
+    width: 69% !important;
   }
   .number-s {
     margin-top: 0% !important;
@@ -153,6 +157,9 @@ body {
   }
   .company-height {
     padding: 30px 0 !important;
+  }
+  .arrow {
+    display: none;
   }
 }
 
@@ -304,6 +311,36 @@ body {
   }
 }
 
+.banner-post {
+  width: 86%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.banner-post .post-img {
+  display: flex;
+  width: 300%;
+  animation: banner-post 8s ease infinite;
+}
+
+@keyframes banner-post {
+  0% {
+    margin-left: 0;
+  }
+  25% {
+    margin-left: 0%;
+  }
+  50% {
+    margin-left: -100%;
+  }
+  75% {
+    margin-left: -100%;
+  }
+  100% {
+    margin-left: -200%;
+  }
+}
+
 .logo-s {
   width: 86%;
   margin: 0 auto;
@@ -407,7 +444,8 @@ h4 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 7%;
+  margin-top: 2%;
+  padding: 0 1%;
 }
 
 .show .show-banner {
@@ -415,7 +453,7 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0 2px 5px #999999;
+  border: 1px solid #ddd;
 }
 
 .show .show-banner img {
@@ -477,7 +515,7 @@ h4 {
 .link:after {
   content: "";
   display: block;
-  width: 14%;
+  width: 85px;
 }
 
 .link ul {
