--- a/css/task14/css/task14-1.scss
+++ b/css/task14/css/task14-1.scss
@@ -171,6 +171,12 @@ $color-2: #fafafa;
       
             .number-1 {
                flex-basis: 62% !important;
+
+               padding-left: 5%;
+
+              span {
+                   width: 69% !important;
+               }
            }
         
         }
@@ -191,6 +197,11 @@ $color-2: #fafafa;
             padding: 30px 0 !important;
          }
 
+         .arrow {
+            display: none;
+        }
+
+       
     }
 
 
@@ -367,6 +378,45 @@ $color-2: #fafafa;
     100% {margin-left: -400%; }
 }
 
+
+
+
+.banner-post {
+    width: 86%;
+    margin: 0 auto;
+    overflow: hidden;
+.post-img {
+    display: flex;
+    width: 300%;
+  
+
+    animation:banner-post 8s ease infinite; 
+}
+
+
+}
+
+@keyframes banner-post {
+ 
+    0% {margin-left: 0;}
+  
+
+    25% {margin-left: 0%;}
+    
+
+    50% {margin-left: -100%; }
+    
+
+    75% {margin-left: -100%; }
+  
+
+    100% {margin-left: -200%; }
+}
+
+
+
+
+
 $color-3: #999999;
 
 .logo-s {
@@ -479,13 +529,14 @@ h4 {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
-   margin-top: 7%;
+   margin-top: 2%;
+   padding: 0 1%;
 .show-banner {
     flex-basis: 23%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 0 2px 5px $color-3;
+    border: 1px solid #ddd;
     
    img {
        padding-top: 20px;
@@ -548,7 +599,7 @@ h4 {
     &:after { 
         content: ""; 
         display: block;
-        width:14%;
+        width: 85px;
     } 
         
         ul{
