--- a/css/task14/css/task14-1.scss
+++ b/css/task14/css/task14-1.scss
@@ -117,6 +117,13 @@ $color-2: #fafafa;
          padding-right:0;
      }
    
+     .arrow {
+         display: none;
+     }
+
+     .number-1 span {
+         width: 100% !important;
+     }
  
     } 
 
@@ -131,6 +138,7 @@ $color-2: #fafafa;
      justify-content: space-evenly !important;
      .number-1 {
         flex-basis: 44% !important;
+    
     }
  }
  .number-s {
@@ -171,12 +179,7 @@ $color-2: #fafafa;
       
             .number-1 {
                flex-basis: 100% !important;
-
-               padding-left: 5%;
-
-              span {
-                   width: 69% !important;
-               }
+               padding-left: 17%;
            }
         
         }
@@ -197,12 +200,21 @@ $color-2: #fafafa;
             padding: 30px 0 !important;
          }
 
-         .arrow {
-            display: none;
+         .los {
+            width: 52%;
         }
 
-       
     }
+
+
+    @media  screen and (min-width:320px) and (max-width: 992.98px) {
+
+           .a1 {
+            display: none;
+           }
+
+    }
+
 
 
 
@@ -216,11 +228,18 @@ $color-2: #fafafa;
 @media  screen and (min-width:320px) and (max-width: 767.98px) {
     .nav-link {
         line-height: 30px !important;
-        height: 86px !important;
+        height: 94px !important;
         .link-text {
         font-size: 15px !important;
        }
 
+}
+.list-2 {
+    border: 0 !important;
+}
+
+.list-3 {
+    padding-left: 20px !important;
 }
 
 
@@ -380,7 +399,6 @@ $color-2: #fafafa;
 
 
 
-
 .banner-post {
     width: 86%;
     margin: 0 auto;
@@ -412,7 +430,6 @@ $color-2: #fafafa;
 
     100% {margin-left: -200%; }
 }
-
 
 
 
@@ -624,6 +641,7 @@ h4 {
 
 .footer {
     background: $background;
+    margin-top: 2%;
     
 >.footer-box {
     margin: 0 auto;
