--- a/css/task14/css/task14-3.css
+++ b/css/task14/css/task14-3.css
@@ -100,7 +100,7 @@ body {
     padding-right: 0;
   }
   .nav-link {
-    height: 86px;
+    height: 94px;
   }
   .nav-link {
     line-height: 30px !important;
@@ -272,6 +272,9 @@ body {
 
 a:hover {
   background: #26a26f;
+  padding: 5px  0;
+  border-radius: 3px;
+  color: #fff !important;
 }
 
 .dd {
