--- a/css/task14/css/task14-1.css
+++ b/css/task14/css/task14-1.css
@@ -98,6 +98,12 @@ body {
     width: 79px;
     padding-right: 0;
   }
+  .arrow {
+    display: none;
+  }
+  .number-1 span {
+    width: 100% !important;
+  }
 }
 
 @media screen and (min-width: 576.98px) and (max-width: 992.98px) {
@@ -140,10 +146,7 @@ body {
   }
   .number .number-1 {
     flex-basis: 100% !important;
-    padding-left: 5%;
-  }
-  .number .number-1 span {
-    width: 69% !important;
+    padding-left: 17%;
   }
   .number-s {
     margin-top: 0% !important;
@@ -158,7 +161,13 @@ body {
   .company-height {
     padding: 30px 0 !important;
   }
-  .arrow {
+  .los {
+    width: 52%;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 992.98px) {
+  .a1 {
     display: none;
   }
 }
@@ -166,10 +175,16 @@ body {
 @media screen and (min-width: 320px) and (max-width: 767.98px) {
   .nav-link {
     line-height: 30px !important;
-    height: 86px !important;
+    height: 94px !important;
   }
   .nav-link .link-text {
     font-size: 15px !important;
+  }
+  .list-2 {
+    border: 0 !important;
+  }
+  .list-3 {
+    padding-left: 20px !important;
   }
   .an:before {
     width: 30px !important;
@@ -536,6 +551,7 @@ h4 {
 
 .footer {
   background: #26a26f;
+  margin-top: 2%;
 }
 
 .footer > .footer-box {
