--- a/JS/任务一/scaa/task-1.css
+++ b/JS/任务一/scaa/task-1.css
@@ -1,31 +1,31 @@
-#wrap {
-  width: 100vmin;
-  height: 100vmin;
+body {
   margin: 0 auto;
 }
 
-#wrap > div {
-  border-radius: 10px;
-  background: #ffa500;
-  height: 31.3%;
-  float: left;
-  width: 31.3%;
-  margin: 1%;
-}
-
-#wrap button {
-  border: 1px solid #ffa500;
-  background: #fff;
-  color: #ffa500;
-  display: block;
-  height: 40px;
-  margin: 0 auto;
-  margin-top: 1%;
+.wrap {
   width: 100%;
+}
+
+.wrap > .block {
+  background: #ffa500;
+  border-radius: 3%;
+  float: left;
+  margin: 1%;
+  padding-bottom: 31.3%;
+  width: 31.3%;
+}
+
+.wrap button {
+  background: #fff;
+  border: 1px solid #ffa500;
+  color: #ffa500;
+  width: 100%;
+  margin-top: 1%;
+  height: 30px;
   outline: none;
 }
 
-#wrap button:hover {
+.wrap button:hover {
   background: #ffa500;
   color: #fff;
 }
