--- a/JS/任务一/scaa/task-1.scss
+++ b/JS/任务一/scaa/task-1.scss
@@ -1,37 +1,33 @@
+body {
+    margin: 0 auto;
+}
 
 $background: #ffa500;
 $background-1: #fff;
-#wrap {
-    width: 100vmin;
-    height: 100vmin;
-    margin: 0 auto;
 
-    &>div {
-       border-radius: 10px;
-       background: $background;
-       height: 31.3%;
-       float: left;
-       width: 31.3%;
-       margin: 1%;
-    }
+.wrap {
+    width: 100%;
 
-    button {
-        border: 1px solid $background;
-        background: $background-1;
-        color: $background;
-        display: block;
-        height: 40px;
-        margin: 0 auto;
-        margin-top: 1%;
-        width: 100%;
-        outline: none;
-    
-        
-        &:hover {
-        background: $background;
-        color: $background-1;
+        >.block {
+            background: $background;
+            border-radius: 3%;
+            float: left;
+            margin: 1%;
+            padding-bottom: 31.3%;
+            width: 31.3%;
         }
-    }
-
+        button {
+            background: $background-1;
+            border: 1px solid $background;
+            color: $background;
+            width: 100%;
+            margin-top: 1%;
+            height: 30px;
+            outline: none;
+            &:hover {
+                background: $background;
+                color: $background-1;
+            }
+            
+        }
 }
-
