--- a/JS/task2/Sass/task-2-1.css
+++ b/JS/task2/Sass/task-2-1.css
@@ -1,102 +1,228 @@
 body {
-  margin: 0 auto;
   min-width: 320px;
   max-width: 768px;
+  margin: 0 auto;
 }
 
-.wrap {
+.box {
   background: #f0f0f0;
-  padding-bottom: 1%;
+  padding-bottom: 40px;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  left: 0%;
+  transition: left 0.5s;
 }
 
-.wrap > .hot {
-  padding: 2%;
-  background: #fff;
-}
-
-.header {
-  width: 100%;
-  height: 60px;
-  margin-bottom: 1.5%;
+.box .header {
   background: #29bde0;
-  display: flex;
-  align-items: center;
-}
-
-.header > img {
-  width: 20px;
-  height: 30px;
-  padding: 2%;
-}
-
-.distribution {
-  width: 96%;
-  margin: 0 auto;
-  font-size: 20px;
-  text-align: center;
-  line-height: 50px;
-  border: 1px solid #f0f0f0;
-  background: #fff;
-}
-
-.role, .word, .amount {
-  width: 96%;
-  background: #fff;
-  margin: 0 auto;
-  margin-top: 1%;
-  display: flex;
-  border: 1px solid #f0f0f0;
-}
-
-.role > .role-logo, .word > .role-logo, .amount > .role-logo {
-  width: 50%;
-  padding-top: 2%;
-  padding-bottom: 40%;
-  display: flex;
-  align-items: center;
-}
-
-.role > .role-logo img, .word > .role-logo img, .amount > .role-logo img {
   height: 60px;
-  padding: 0 5%;
+  display: flex;
+  align-items: center;
 }
 
-.word > .box {
-  width: 80%;
+.box-1 {
+  width: 92%;
   margin: 0 auto;
-  padding-top: 2%;
+  transition: all 2s;
 }
 
-.word > .box > .civilian {
-  margin-bottom: 5%;
-  border-bottom: 1.3px solid #f0f0f0;
-  font-size: 17px;
-  line-height: 40px;
-  color: #d7d7d7;
-}
-
-.amount > .number {
-  width: 80%;
-  margin: 0 auto;
-  padding-top: 3.5%;
-  padding-bottom: 20%;
-  font-size: 19px;
-}
-
-.footer {
-  width: 96%;
+.box-1 .block-1 {
+  height: 70px;
+  border: 1px solid #c9c9c9;
   background: #fff;
-  margin: 0 auto;
-  margin-top: 3%;
-  margin-bottom: 3%;
+  margin-top: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #a7a7a7;
+  font-size: 24px;
 }
 
-.footer button {
-  width: 100%;
-  font-size: 24px;
+.box-1 .block-1 span {
+  padding-left: 15px;
+}
+
+.box-1 .block-1 img {
+  margin-right: 15px;
+}
+
+.box-1 .box-2 {
+  border: 1px solid #c9c9c9;
+  margin-top: 24px;
+  background: #fff;
+}
+
+.box-1 .box-2 .block-2 {
+  height: 70px;
+  border-bottom: 1px solid #fbb435;
+  color: #fbb435;
+  font-size: 28px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box-3 {
+  display: flex;
+  flex-direction: column;
+}
+
+.box-3 > button {
+  width: 80%;
+  background: #29bde0;
+  height: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fff;
-  background: #fcbd4e;
+  font-size: 24px;
+  margin: 0 auto;
+  margin-top: 24px;
   border: 0;
-  line-height: 60px;
   outline: none;
+}
+
+.box-3 > button:hover {
+  background: #fbb435;
+  font-size: 30px;
+}
+
+.box-3 > span {
+  color: #a7a7a7;
+  font-size: 16px;
+  text-align: center;
+  padding-top: 24px;
+}
+
+.box-3 > .box-4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 24px;
+}
+
+.box-3 > .box-4 > .block-4 {
+  width: 80%;
+  background: #29bde0;
+  height: 110px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 24px;
+  margin-left: 28px;
+}
+
+.box-3 > .box-4 > .block-4:hover {
+  background: #f66f6f;
+  font-size: 40px;
+}
+
+.box-3 > .box-4 img {
+  width: 21px;
+  height: 50px;
+  padding-left: 10px;
+}
+
+.dot {
+  display: flex;
+  justify-content: center;
+}
+
+.dot li {
+  font-size: 30px;
+  margin-right: -24px;
+  margin-top: -7px;
+  color: #c9c9c9;
+}
+
+.dot li:hover {
+  color: #29bde0;
+}
+
+.select {
+  padding-left: 20px;
+  pointer-events: none;
+}
+
+.list {
+  color: #29bde0;
+  position: absolute;
+  z-index: 999;
+  background: #fff;
+  opacity: 1;
+  left: -261px;
+  transition: left 0.5s;
+  height: 100%;
+  width: 260px;
+  transition: all 1s;
+}
+
+.list-1 {
+  width: 200px;
+  height: 50px;
+  border-bottom: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.notice {
+  width: 24px;
+  height: 23.6px;
+  border-radius: 100%;
+  border: 1px solid #29bde0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.left {
+  display: flex;
+  align-items: center;
+}
+
+.text {
+  padding-left: 15px;
+}
+
+.text-1 {
+  padding-right: 20px;
+  font-size: 26px;
+}
+
+.lo {
+  font-size: 26px;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.box input {
+  display: none;
+}
+
+.an::before {
+  content: "";
+  display: inline-block;
+  width: 38px;
+  height: 40px;
+  background: blueviolet;
+  position: absolute;
+  top: 10px;
+  left: 20.5px;
+  opacity: 0;
+}
+
+#t1:checked ~ .list {
+  left: 0;
+  transition: all 1s;
+}
+
+#t1:checked ~ .box-1 {
+  transform: translate(260px, 0px);
+  transition: all 1s;
 }
