--- a/JS/task2/Sass/task-2-2.scss
+++ b/JS/task2/Sass/task-2-2.scss
@@ -53,6 +53,12 @@ $color-f: #fff;
     display: flex;
     border: 1px solid $background;
 
+    .recompose {
+        width: 17px;
+        font-size: 13px;
+        outline: none;
+        border: none;
+    }
     >.role-logo {
         width: 50%;
         padding-top: 2%;
@@ -79,6 +85,13 @@ $color-f: #fff;
                         font-size: 17px;
                         line-height: 40px;
                         color: #d7d7d7; 
+                        >.text {
+                            outline: none;
+                            border: none;
+                            color: $color;
+                            font-size: 12px;
+                            padding-left: 2%;
+                        }
                     }
             }
     }
@@ -89,11 +102,64 @@ $color-f: #fff;
                 width: 80%;
                 margin: 0 auto;
                 padding-top: 3.5%;
-                padding-bottom: 20%;
-                font-size: 19px;
+                padding-bottom: 5%;
+                font-size: 15px;
+                .game::-webkit-input-placeholder{
+                    color:$color;
+                    }
+                    >.game {
+                        width: 34px;
+                        height: 26px;
+                        border-radius: 5px;
+                        font-size: 17px;
+                        color: $color;
+                        text-align: center;
+                        outline: none;
+                        border: none;
+                        background: $background;
+                    }
+                    >.player-color {
+                        color: $color;
+                        font-size: 12px;
+                    }
+                    >.progress-bar {
+                        margin-top: 10%;
+
+                            button {
+                                width: 21px;
+                                color: $color;
+                                background: $color-f;
+                                border: 1px solid $background;
+                                outline: none;
+                            }
+                    }
+
+                    input[type="range"] {
+                        width: 76%;
+                        height: 5px;
+                        outline: none;
+                        -webkit-appearance: none;
+                        background-color:$color; 
+                    }
+
+                    input[type="range"]::-webkit-slider-thumb {
+                        width: 30px;
+                        height: 20px;
+                        -webkit-appearance: none;
+                        border-radius: 5px;
+                        border: 1px solid $color;
+                        background:$color-f;
+                    }
+
+
             }
 
     }
+
+  
+
+
+
     .footer {
         width: 96%;
         background: $color-f;
