--- a/JS/task3/Sass/task-3-1.scss
+++ b/JS/task3/Sass/task-3-1.scss
@@ -68,6 +68,7 @@ body {
 
         >.block {
             width: 72%;
+            height: 400px;
             margin: 0 auto;
             margin-top: 10%;
             background: $background;
@@ -76,7 +77,6 @@ body {
             justify-content: center;
             align-items: center;
             .photo {
-                padding: 15% 0;
                 display: flex;
                 justify-content: center;
                 img {
@@ -110,5 +110,94 @@ body {
             input::-webkit-input-placeholder{
                 color:$color-f;
                 }
+        }
+}
+
+
+
+
+
+
+
+
+.block-1 {
+    width: 72%;
+    height: 400px;
+    margin: 0 auto;
+    margin-top: 10%;
+    background: $background;
+    border: 3px solid $color-f;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .photo-2 {
+        display: flex;
+        justify-content: center;
+        padding-top: 50px;
+        img {
+            width: 70%;  
+        }  
+        }
+        .result-1 {
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+             font-size: 24px;
+             color: #f56b81;
+            padding: 2% 0;
+                >.name {
+                    width: 50px;
+                    height: 26px;
+                    font-size: 24px;
+                    color: $background-color;
+                    border: none;
+                    outline: none;
+                    background: $background;
+                    margin-top: 20px;
+                } 
+        }
+}
+
+.warn {
+    width: 100%;
+    margin-top: 30px;
+    border-top: 1px solid $color-f;
+    text-align: center;
+    p {
+        padding: 0 20px;
+        font-size: 17px;
+        color: $color;
+    }
+}
+
+
+
+
+.button-1 {
+    width: 70%;
+    position: fixed;
+    bottom: 3%;
+    left: calc(50% - 35%);
+    font-size: 25px;
+    padding: 10px 0;
+    color: $color-f;
+    background: $color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    >input {
+        width: 20px;
+        height: 20px;
+        border: none;
+        outline: none;
+        font-size: 25px;
+        color: $color-f;
+        text-align: center;
+        padding-top: 7px;
+        background: $color;
+    }
+    input::-webkit-input-placeholder{
+        color:$color-f;
         }
 }
