--- a/JS/task3/Sass/task-3-1.css
+++ b/JS/task3/Sass/task-3-1.css
@@ -61,6 +61,7 @@ body {
 
 .status > .block {
   width: 72%;
+  height: 400px;
   margin: 0 auto;
   margin-top: 10%;
   background: #ffedc5;
@@ -71,7 +72,6 @@ body {
 }
 
 .status > .block .photo {
-  padding: 15% 0;
   display: flex;
   justify-content: center;
 }
@@ -107,5 +107,90 @@ body {
 }
 
 .status > .button input::-webkit-input-placeholder {
+  color: #fff;
+}
+
+.block-1 {
+  width: 72%;
+  height: 400px;
+  margin: 0 auto;
+  margin-top: 10%;
+  background: #ffedc5;
+  border: 3px solid #fff;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.block-1 .photo-2 {
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
+}
+
+.block-1 .photo-2 img {
+  width: 70%;
+}
+
+.block-1 .result-1 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 24px;
+  color: #f56b81;
+  padding: 2% 0;
+}
+
+.block-1 .result-1 > .name {
+  width: 50px;
+  height: 26px;
+  font-size: 24px;
+  color: #29bde0;
+  border: none;
+  outline: none;
+  background: #ffedc5;
+  margin-top: 20px;
+}
+
+.warn {
+  width: 100%;
+  margin-top: 30px;
+  border-top: 1px solid #fff;
+  text-align: center;
+}
+
+.warn p {
+  padding: 0 20px;
+  font-size: 17px;
+  color: #fcbd4e;
+}
+
+.button-1 {
+  width: 70%;
+  position: fixed;
+  bottom: 3%;
+  left: calc(50% - 35%);
+  font-size: 25px;
+  padding: 10px 0;
+  color: #fff;
+  background: #fcbd4e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-1 > input {
+  width: 20px;
+  height: 20px;
+  border: none;
+  outline: none;
+  font-size: 25px;
+  color: #fff;
+  text-align: center;
+  padding-top: 7px;
+  background: #fcbd4e;
+}
+
+.button-1 input::-webkit-input-placeholder {
   color: #fff;
 }
