--- a/JS/task3/Sass/task-3-2.css
+++ b/JS/task3/Sass/task-3-2.css
@@ -61,6 +61,7 @@ body {
 
 .status > .block {
   width: 72%;
+  height: 400px;
   margin: 0 auto;
   margin-top: 10%;
   background: #ffedc5;
@@ -71,9 +72,9 @@ body {
 }
 
 .status > .block .photo {
-  padding-top: 15%;
   display: flex;
   justify-content: center;
+  padding-top: 50px;
 }
 
 .status > .block .photo img {
@@ -97,21 +98,12 @@ body {
   border: none;
   outline: none;
   background: #ffedc5;
-}
-
-.status > .block .result .text {
-  width: 50px;
-  height: 26px;
-  font-size: 24px;
-  color: #f56b81;
-  border: none;
-  outline: none;
-  background: #ffedc5;
-  justify-content: center;
+  margin-top: 20px;
 }
 
 .status .warn {
   width: 100%;
+  margin-top: 30px;
   border-top: 1px solid #fff;
   text-align: center;
 }
@@ -120,10 +112,9 @@ body {
   padding: 0 20px;
   font-size: 17px;
   color: #fcbd4e;
-  padding-bottom: 7%;
 }
 
-.status > .button {
+.status > .button-1 {
   width: 70%;
   position: fixed;
   bottom: 3%;
@@ -137,7 +128,7 @@ body {
   justify-content: center;
 }
 
-.status > .button > input {
+.status > .button-1 > input {
   width: 20px;
   height: 20px;
   border: none;
@@ -149,6 +140,6 @@ body {
   background: #fcbd4e;
 }
 
-.status > .button input::-webkit-input-placeholder {
+.status > .button-1 input::-webkit-input-placeholder {
   color: #fff;
 }
