--- a/JS/task3/Sass/task-3-1.scss
+++ b/JS/task3/Sass/task-3-1.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .hot {
-        padding: 2%;
+        padding: 10px;
         background: $color-f;
     }
 
@@ -46,10 +46,11 @@ body {
         border: 1px solid $background;
         border-radius: 100%;
         left: calc(50% - 25px);
-        top: -25px;
+        top: 74px;
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 999;
         input {
             width: 78%;
             height: 65%;
@@ -70,12 +71,14 @@ body {
             width: 72%;
             height: 400px;
             margin: 0 auto;
-            margin-top: 10%;
+            top: 100px;
             background: $background;
             border: 3px solid $color-f;
             display: flex;
             justify-content: center;
             align-items: center;
+            position: absolute;
+            left: calc(50% - 36.5%);
             .photo {
                 display: flex;
                 justify-content: center;
@@ -123,13 +126,14 @@ body {
 .block-1 {
     width: 72%;
     height: 400px;
-    margin: 0 auto;
-    margin-top: 10%;
+    top: 100px;
     background: $background;
     border: 3px solid $color-f;
     display: flex;
     align-items: center;
     flex-direction: column;
+    position: absolute;
+    left: calc(50% - 36.5%);
 
     .photo-2 {
         display: flex;
