--- a/JS/task3/Sass/task-3-1.css
+++ b/JS/task3/Sass/task-3-1.css
@@ -29,6 +29,7 @@ body {
 .status {
   position: relative;
   padding-bottom: 30%;
+  margin-top: 90px;
 }
 
 .status > .number {
@@ -39,7 +40,7 @@ body {
   border: 1px solid #ffedc5;
   border-radius: 100%;
   left: calc(50% - 25px);
-  top: 74px;
+  top: -25px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,26 +61,25 @@ body {
   color: #f56b81;
 }
 
-.status > .block {
+.status > .content {
   width: 72%;
   height: 400px;
   margin: 0 auto;
-  top: 100px;
+  position: absolute;
   background: #ffedc5;
   border: 3px solid #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
   left: calc(50% - 36.5%);
 }
 
-.status > .block .photo {
+.status > .content .photo {
   display: flex;
   justify-content: center;
 }
 
-.status > .block .photo img {
+.status > .content .photo img {
   width: 70%;
 }
 
@@ -95,14 +95,15 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 999;
 }
 
 .status > .button > input {
-  width: 20px;
+  width: 100%;
   height: 20px;
   border: none;
   outline: none;
-  font-size: 25px;
+  font-size: 23px;
   color: #fff;
   text-align: center;
   padding-top: 7px;
@@ -113,30 +114,28 @@ body {
   color: #fff;
 }
 
-.block-1 {
+.contents {
   width: 72%;
   height: 400px;
-  top: 100px;
+  margin-left: calc(50% - 36.5%);
   background: #ffedc5;
   border: 3px solid #fff;
   display: flex;
   align-items: center;
   flex-direction: column;
-  position: absolute;
-  left: calc(50% - 36.5%);
 }
 
-.block-1 .photo-2 {
+.contents .photo-2 {
   display: flex;
   justify-content: center;
   padding-top: 50px;
 }
 
-.block-1 .photo-2 img {
+.contents .photo-2 img {
   width: 70%;
 }
 
-.block-1 .result-1 {
+.contents .result-1 {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -145,7 +144,7 @@ body {
   padding: 2% 0;
 }
 
-.block-1 .result-1 > .name {
+.contents .result-1 > .name {
   width: 50px;
   height: 26px;
   font-size: 24px;
@@ -169,7 +168,7 @@ body {
   color: #fcbd4e;
 }
 
-.button-1 {
+.buttons {
   width: 70%;
   position: fixed;
   bottom: 3%;
@@ -183,18 +182,18 @@ body {
   justify-content: center;
 }
 
-.button-1 > input {
-  width: 20px;
+.buttons > input {
+  width: 100%;
   height: 20px;
   border: none;
   outline: none;
-  font-size: 25px;
+  font-size: 23px;
   color: #fff;
   text-align: center;
   padding-top: 7px;
   background: #fcbd4e;
 }
 
-.button-1 input::-webkit-input-placeholder {
+.buttons input::-webkit-input-placeholder {
   color: #fff;
 }
