--- a/JS/task3/Sass/task-3-1.scss
+++ b/JS/task3/Sass/task-3-1.scss
@@ -37,6 +37,7 @@ body {
 .status {
     position: relative;
     padding-bottom: 30%;
+    margin-top: 90px;
 
     >.number {
         width: 50px;
@@ -46,7 +47,7 @@ body {
         border: 1px solid $background;
         border-radius: 100%;
         left: calc(50% - 25px);
-        top: 74px;
+        top: -25px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -67,18 +68,19 @@ body {
 
 
 
-        >.block {
+        >.content {
             width: 72%;
             height: 400px;
             margin: 0 auto;
-            top: 100px;
+            
+            position: absolute;
             background: $background;
             border: 3px solid $color-f;
             display: flex;
             justify-content: center;
             align-items: center;
-            position: absolute;
             left: calc(50% - 36.5%);
+           
             .photo {
                 display: flex;
                 justify-content: center;
@@ -99,12 +101,13 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
+            z-index: 999;
             >input {
-                width: 20px;
+                width: 100%;
                 height: 20px;
                 border: none;
                 outline: none;
-                font-size: 25px;
+                font-size: 23px;
                 color: $color-f;
                 text-align: center;
                 padding-top: 7px;
@@ -123,17 +126,17 @@ body {
 
 
 
-.block-1 {
+.contents {
     width: 72%;
     height: 400px;
-    top: 100px;
+    
+    margin-left: calc(50% - 36.5%);
     background: $background;
     border: 3px solid $color-f;
     display: flex;
     align-items: center;
     flex-direction: column;
-    position: absolute;
-    left: calc(50% - 36.5%);
+   
 
     .photo-2 {
         display: flex;
@@ -178,7 +181,7 @@ body {
 
 
 
-.button-1 {
+.buttons {
     width: 70%;
     position: fixed;
     bottom: 3%;
@@ -191,11 +194,11 @@ body {
     align-items: center;
     justify-content: center;
     >input {
-        width: 20px;
+        width: 100%;
         height: 20px;
         border: none;
         outline: none;
-        font-size: 25px;
+        font-size: 23px;
         color: $color-f;
         text-align: center;
         padding-top: 7px;
