--- a/JS/task3/Sass/task3-2.scss
+++ b/JS/task3/Sass/task3-2.scss
@@ -1,17 +1,16 @@
-body {
-    margin: 0 auto;
-    min-width: 320px;
-    max-width: 768px;
-}
-
 $background: #29bde0;
 $block-top: #f5c97b;
 $block-bottom: #83b09a;
 
-.box {
+
+body {
+    margin: 0;
     background:$background;
-    height: 100vh;
 }
+
+
+
+
 .header {
     width: 94%;
     margin: 0 auto;
@@ -79,7 +78,7 @@ $block-bottom: #83b09a;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-   >.block-1 {
+   .block-1 {
     flex-basis: 33.33%;
     display: flex;
     flex-direction: column;
@@ -89,15 +88,25 @@ $block-bottom: #83b09a;
     margin: 0 auto;
     width: 88px;
     border: 3px solid #fff;
-    >.top {
+    .top {
         height: 64px;
         background: $block-top;
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 17px;
+        .name {
+            width: 50px;
+            height: 30px;
+            font-size: 20px;
+            text-align: center;
+            background: $block-top;
+            border: none;
+            outline: none;
+            
+        }
     }
-    >.bottom {
+    .bottom {
         height: 24px;
         background: $block-bottom;
         display: flex;
@@ -105,6 +114,15 @@ $block-bottom: #83b09a;
         align-items: center;
         font-size: 15px;
         color: #fff;
+
+        .number {
+            width: 30px;
+            text-align: center;
+            color: #fff;
+            border: none;
+            outline: none;
+            background: $block-bottom;
+        }
     }
 }
 
@@ -113,7 +131,7 @@ $block-bottom: #83b09a;
     width: 92px;
     margin: 15px 0;
     height: 19px;
->.combination {
+.combination {
     width: 92px;
     height: 19px;
     display: none;
@@ -128,8 +146,6 @@ $block-bottom: #83b09a;
 .footer {
     position: fixed;
     z-index: 99999;
-    max-width: 768px;
-    min-width: 320px;
     width: 100%;
     height: 60px;
     bottom: 0;
