--- a/JS/task3/Sass/task-4-3.scss
+++ b/JS/task3/Sass/task-4-3.scss
@@ -144,6 +144,9 @@ body {
 .block-1:hover .combination {
     display: block;
 }
+.block-2:hover .top {
+    background: #83b09a;
+}
 
 .footer {
     position: fixed;
